--- a/src/app/features/usuario-tareas/pages/tareas-list/tareas-list.html
+++ b/src/app/features/usuario-tareas/pages/tareas-list/tareas-list.html
@@ -108,7 +108,7 @@
             <p class="text-xs text-blue-600 uppercase font-medium">En Progreso</p>
             <p class="text-2xl font-bold text-blue-700">{{resumen.tareasEnProgreso}}</p>
           </div>
-          <lucide-icon name="loader" [size]="32" class="text-blue-500 animate-spin"></lucide-icon>
+          <lucide-icon name="loader" [size]="32" class="text-blue-500"></lucide-icon>
         </div>
       </div>
 
